v2/_sources/python-api/pyvcad/composition.rst.txt
Tree — composition nodes
==========================

Transforms, tiling, boolean CSG, offsets, shells, and mapping helpers.

.. currentmodule:: pyvcad

.. autoclass:: Rotate
   :members:
   :undoc-members:
   :special-members: __init__

.. autoclass:: Scale
   :members:
   :undoc-members:
   :special-members: __init__

.. autoclass:: Translate
   :members:
   :undoc-members:
   :special-members: __init__

.. autoclass:: Sum
   :members:
   :undoc-members:
   :special-members: __init__

.. autoclass:: Tile
   :members:
   :undoc-members:
   :special-members: __init__

.. autoclass:: Difference
   :members:
   :undoc-members:
   :special-members: __init__

.. autoclass:: Intersection
   :members:
   :undoc-members:
   :special-members: __init__

.. autoclass:: Union
   :members:
   :undoc-members:
   :special-members: __init__

.. autoclass:: BBoxUnion
   :members:
   :undoc-members:
   :special-members: __init__

.. autoclass:: Offset
   :members:
   :undoc-members:
   :special-members: __init__

.. autoclass:: Shell
   :members:
   :undoc-members:
   :special-members: __init__

.. autoclass:: ConformalMap
   :members:
   :undoc-members:
   :special-members: __init__
