v3/_sources/python-api/pyvcad/composition.rst.txt
Tree — composition nodes
==========================

**Composition nodes** are non-:class:`Leaf` nodes that each **own** one or more child subtrees. They describe how pieces are placed and combined in space: rigid transforms and tilings, constructive solid geometry (union, intersection, difference and bbox variants), offsets and shells.

Use them to assemble and modify designs built from :doc:`leaves` without duplicating underlying primitives.

.. currentmodule:: pyvcad

.. autoclass:: Identity
   :members:
   :undoc-members:
   :special-members: __init__

.. autoclass:: Rotate
   :members:
   :undoc-members:
   :special-members: __init__

.. autoclass:: Scale
   :members:
   :undoc-members:
   :special-members: __init__

.. autoclass:: Translate
   :members:
   :undoc-members:
   :special-members: __init__

.. autoclass:: Sum
   :members:
   :undoc-members:
   :special-members: __init__

.. autoclass:: Tile
   :members:
   :undoc-members:
   :special-members: __init__

.. autoclass:: Difference
   :members:
   :undoc-members:
   :special-members: __init__

.. autoclass:: Intersection
   :members:
   :undoc-members:
   :special-members: __init__

.. autoclass:: BBoxIntersection
   :members:
   :undoc-members:
   :special-members: __init__

.. autoclass:: Union
   :members:
   :undoc-members:
   :special-members: __init__

.. autoclass:: BBoxUnion
   :members:
   :undoc-members:
   :special-members: __init__

.. autoclass:: Offset
   :members:
   :undoc-members:
   :special-members: __init__

.. autoclass:: Shell
   :members:
   :undoc-members:
   :special-members: __init__

.. autoclass:: ConformalMap
   :members:
   :undoc-members:
   :special-members: __init__
